--- a/src/pages/home-page/home-page.styles.scss
+++ b/src/pages/home-page/home-page.styles.scss
@@ -4,4 +4,9 @@
     min-height: 50vh;
     width: 100vw;
     position: relative;
+
+    h1{
+        font-size: 16px;
+        font-weight: 400;
+    }
 }
