--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -35,7 +35,7 @@
     background-color: #0099CC;
     padding-bottom: 2rem;
 }
-.header-titles{
+.footer-titles{
     padding-top: 2rem;
     display: flex;
     flex-direction: column;
@@ -68,7 +68,7 @@
 margin: auto;
     }
 }
-.header-search-button{
+.footer-search-button{
     margin: auto;
     margin-top: 1rem;
     width: 350px;
