--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -6,16 +6,15 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    // align-items: center;
     width: 100%;
-    min-height: 25vh;
+    // min-height: 25vh;
     // background-color: #0099CC;
     padding-bottom: 2rem;
 
 
-
-
     .header-menu{
+        align-self: center;
         width: 350px;
         // min-height: 200px;
         border-radius: 20px;
@@ -46,6 +45,33 @@
         h2{
             margin: 0;
             font-size: 12px;
+        }
+    }
+    .hamburger-btn{
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+
+        width: 20px;
+        height: 20px;
+
+        background-color: white;
+        border: none;
+        align-self: flex-end;
+        margin-right: 2rem;
+        margin-bottom: 2rem;
+        margin-top: 2rem;
+        cursor: pointer;
+
+        .bar{
+            height: 3px;
+            width: 20px;
+            background-color: rgb(48, 48, 88);
+        }
+        .bar-short{
+            height: 3px;
+            width: 15px;
+            background-color: rgb(48, 48, 88);
         }
     }
    
