--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,79 +1,87 @@
 @use '../../styles.scss';
 
-
 .header{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    // align-items: center;
     width: 100%;
-    // min-height: 25vh;
-    // background-color: #0099CC;
-    padding-bottom: 2rem;
+    min-height: 10vh;
+    background-color: rgb(48, 48, 88);
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 10rem;
+    margin-bottom: 50px;
 
-
-    .header-menu{
-        align-self: center;
-        width: 350px;
-        // min-height: 200px;
-        border-radius: 20px;
-        box-shadow: 1px 1px 1px 1px #888888;
-    }
-    .category-container{
-        border-radius: 20px;
-        background-color: white;
-        padding-left: 1rem;
-        padding-right: 1rem;
-        min-height: 50px;
-        width: 100%;
-        border-bottom: solid 2px #ccc ;
-    }
-    
-    .header-titles{
+    div{
+        margin-left: 1rem;
+        margin-right: 1rem;
         padding-top: 2rem;
+        color: white;
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-bottom: 2rem;
-        color: white;
         h1{
             margin: 0;
-            margin-bottom: 1rem;
-            font-size: 20px;
+            font-weight: 400;
+            font-size: 4vw;
+            margin-bottom: 0.5rem;
         }
-        h2{
+        h2{   
             margin: 0;
-            font-size: 12px;
+            font-weight: 400;
+            font-size: 3vw;
+            margin-bottom: 0.3rem;
         }
     }
-    .hamburger-btn{
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
 
-        width: 20px;
-        height: 20px;
-
-        background-color: white;
-        border: none;
-        align-self: flex-end;
-        margin-right: 2rem;
-        margin-bottom: 2rem;
-        margin-top: 2rem;
-        cursor: pointer;
-
-        .bar{
-            height: 3px;
-            width: 20px;
-            background-color: rgb(48, 48, 88);
-        }
-        .bar-short{
-            height: 3px;
-            width: 15px;
-            background-color: rgb(48, 48, 88);
-        }
+}
+.header-upper{
+    background-color: #0099CC;
+    padding-bottom: 2rem;
+}
+.header-titles{
+    padding-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 2rem;
+    color: white;
+    h1{
+        margin: 0;
+        margin-bottom: 1rem;
+        font-size: 5vw;
     }
-   
+    h2{
+        margin: 0;
+        font-size: 3vw;
+    }
+}
+.header-search{
 
+    margin: auto;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 70vw;
+    height: 40px;
+    border: 1px solid #ccc;
+    border-radius: 60px;
+
+    p{
+margin: auto;
+    }
+}
+.header-search-button{
+    margin: auto;
+    margin-top: 1rem;
+    width: 70vw;
+    height:40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(224, 159, 40);
+    border-radius: 60px;
+
+    p{
+        font-size: 14px;
+        color: white;
+    }
 }
